# AutoAgents-CUA-Python

./: LICENSE  README-CN.md  README.md  client_hints_analysis.md  config.yaml  config.yaml.example  pyproject.toml  requirements.txt  simple_client_hints_test.py  test_client_hints_final.py  test_final_client_hints.py  working_client_hints_solution.py
Noma/backend/api/: main.py
playground/agent/: test_browser_agent.py  test_browser_agent_advanced.py  test_browser_agent_interactive.py
playground/agent_test/: README.md  agent_simple_demo.py  test_screenshot_tool.py  test_show_stategraph.py
playground/browser/: test_captcha_solver.py  test_fingerprint.py  test_highlight.py  test_page_extractor.py  test_page_extractor_v3.py  test_shadow_dom_parser.py  test_web_operator.py
playground/mobile/: README.md  test_cycle_operations.py
playground/outputs/: pubmed_article_1.txt  pubmed_article_2.txt  pubmed_homepage.txt  pubmed_results.txt  pubmed_search_results.txt  wiki_elements.txt
playground/page_test/: test_Legacy_captcha_agent.py  test_brief_mode.py  test_captcha_agent.py  test_captcha_agent_audio.py  test_highlight.py  test_login_agent.py  test_output_path.py  test_page_extractor.py  test_page_extractor_v3.py  test_pubmed_demo.py  test_reddit.py  test_shadow_dom_parser.py  test_text_save.py  test_web.py  test_web_operator.py
playground/prebuilt/: README.md  test_login_agent.py  test_reddit.py
playground/sdk_test/: 1.py
playground/utils/agent/: __init__.py  test_web_agent.py
playground/utils/captcha/: test_google.py
src/autoagents_cua/: __init__.py
(+30 files in other folders)
